language/tests/error/InvalidAssignmentInWhileCond.sl
def double(x) {
  return 2 * x;
}

def main() {
  while (double(2) = 4) {
    42;
  }
}
